2001-03-22  Al Riddoch  <alriddoch@zepler.org>

        * Makefile.am: Ensured that atlas.m4 is included with the distribution.

2001-03-22  Al Riddoch  <alriddoch@zepler.org>

	* Changed package name to Atlas-C++ to ensure it is distinguishable
	  from the other versions.

2001-03-14  Al Riddoch  <alriddoch@zepler.org>

	* src/Codecs/Makefile.am: Install Codec header files, so codecs can
	  be used directly.

2001-03-13  Al Riddoch  <alriddoch@zepler.org>

	* rename4*.pl: Scripts that rename .cc files as .cpp and visa versa
	  to help windows work.

	* Atlas.mak, Atlas.dsp: Makefile for nmake, and Visual Studio project
	  files for Windows build.

2001-03-13  Al Riddoch  <alriddoch@zepler.org>

	* src/Net/Stream.cc: Added std:: to flush;

	* src/Codecs/Utility.h: Use _snprintf() for Win32 build.

2001-03-13  Al Riddoch  <alriddoch@zepler.org>

	* src/Objects/*/*.cc: More std:: additions.

2001-03-13  Al Riddoch  <alriddoch@zepler.org>

	* src/*: Added more std:: prefixes to symbols from the std namespace.

	* src/Net/Stream.cc: Changed socket checks to check using the
	  good() method.

	* src/Net/Stream.cc, src/Codecs/XML.cc, src/Codecs/Packed.cc: Removed
	  default argument from Poll method definition as it should not be
	  in both declaration and definition.

2001-03-12  Al Riddoch  <alriddoch@zepler.org>

        * index.dox, AUTHORS: Modified docs to indicate new maintainer.

	* NEWS: Added planned 0.5 release.

2001-03-10  Al Riddoch  <alriddoch@zepler.org>

	* tutorial/example/simple_*.cc: Modified tutorial programs to
	  make sure they are completely immaculate.

	* Bumped up version to 0.4.1 ready for release soon.

	* HACKING: Updated to reflect current changes policy.

2001-03-09  Al Riddoch  <alriddoch@zepler.org>

	* src/Object/gen_cc.py: Modified so that the generated files no
	  longer contain "using namespace ...;" which speeds up compile
	  time.

	* src/Object/Operation/* src/Objects/Entity/*: Re-generated using
	  modified gen_cc.py.
