@@ -1,3 +1,10 @@
+2001-03-28  Al Riddoch  <alriddoch@zepler.org>
+
+	* src/Net/Stream.cc: Added ATLAS to greeting message as required
+	  by the Atlas protocol.
+
+	* src/Net/Stream.*: Made header in NegotiateHelper pass by reference.
+
 2001-03-22  Al Riddoch  <alriddoch@zepler.org>
 
         * Makefile.am: Ensured that atlas.m4 is included with the distribution.
